--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="izach" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Зачёт получают... а остальным соболезную.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="statya" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\statya.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
